--- a/TODO.txt
+++ b/TODO.txt
@@ -1,20 +1,17 @@
-Togliere gli alert
+
 Test storia Van Gogh
 
 AUTORE:
  - Un po' di commenti random nel js
 
-VALUTATORE:
+VALUTATORE
+ - con il server viene caricato un messaggio vuoto in chat con chat=[](player1)
  - Elimina player
- - Togliere TODO in .js
 
 PLAYER:
  - Fogli di stile
- - Sei sicuro di voler uscire
- - Togliere TODO in .js
 
 STORIE:
- - Foto alla missione smeraldo
  - Didattica alla missione smeraldo
 
 TEST SERVER UNIBO:
