--- a/TODO.txt
+++ b/TODO.txt
@@ -9,7 +9,7 @@ VALUTATORE
  - Elimina player
 
 PLAYER:
- - Fogli di stile
+ - manca un solo foglio di stile per van gogh
 
 STORIE:
  - Didattica alla missione smeraldo
